# ftdaye

./: Cargo.toml  README.md  openocd_idcode.cfg  openocd_read.cfg  openocd_user1.cfg  openocd_user3.cfg  openocd_usercode.cfg
examples/: ECP5.rs  connect.rs  ftdaye_mpsse.rs  ftdaye_raw.rs  ftdi_raw.rs  ftdi_raw2.rs  ftdi_test.rs  idcode.rs
src/: lib.rs  xilinx7.rs
src/ftdaye/: error.rs  jtag.rs  mod.rs  mpsse.rs
