[package]
name = "ftdaye"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-io = "2.4.0"
bitvec = "1.0.1"
docsplay = "0.1.1"
futures-lite = "2.5.0"
log = "0.4.22"
nusb = "0.1.12"
pretty_env_logger = "0.5.0"
thiserror = "2.0.9"
# probe-rs = "0.25.0"
# probe-rs = { path = "../probe-rs/probe-rs" }
